--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -1,6 +1,412 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csvpath = Path(\"C:/Users/zhaoy/Documents/Northwestern_FinTech_Bootcamp/Module_2_Python/python-homework/PyBank/budget_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Profit/Losses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Jan-2010</td>\n",
+       "      <td>867884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Feb-2010</td>\n",
+       "      <td>984655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Mar-2010</td>\n",
+       "      <td>322013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Apr-2010</td>\n",
+       "      <td>-69417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>May-2010</td>\n",
+       "      <td>310503</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date  Profit/Losses\n",
+       "0  Jan-2010         867884\n",
+       "1  Feb-2010         984655\n",
+       "2  Mar-2010         322013\n",
+       "3  Apr-2010         -69417\n",
+       "4  May-2010         310503"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe = pd.read_csv(csvpath)\n",
+    "budget_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Date'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38382578"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Profit/Losses'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "867884"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe.iloc[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          NaN\n",
+       "1     116771.0\n",
+       "2    -662642.0\n",
+       "3    -391430.0\n",
+       "4     379920.0\n",
+       "        ...   \n",
+       "81   -665765.0\n",
+       "82    693229.0\n",
+       "83   -734926.0\n",
+       "84     77242.0\n",
+       "85    532869.0\n",
+       "Name: Profit/Losses, Length: 86, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Profit/Losses'].diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Profit/Losses</th>\n",
+       "      <th>Changes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Jan-2010</td>\n",
+       "      <td>867884</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Feb-2010</td>\n",
+       "      <td>984655</td>\n",
+       "      <td>116771.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Mar-2010</td>\n",
+       "      <td>322013</td>\n",
+       "      <td>-662642.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Apr-2010</td>\n",
+       "      <td>-69417</td>\n",
+       "      <td>-391430.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>May-2010</td>\n",
+       "      <td>310503</td>\n",
+       "      <td>379920.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date  Profit/Losses   Changes\n",
+       "0  Jan-2010         867884       NaN\n",
+       "1  Feb-2010         984655  116771.0\n",
+       "2  Mar-2010         322013 -662642.0\n",
+       "3  Apr-2010         -69417 -391430.0\n",
+       "4  May-2010         310503  379920.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe[\"Changes\"]=budget_dataframe['Profit/Losses'].diff()\n",
+    "budget_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2315.1176470588234"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Changes'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1926159.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Changes'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2196167.0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budget_dataframe['Changes'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Analysis\n",
+      "----------------------------\n",
+      "Total Months: 86\n",
+      "Total: $38382578\n",
+      "Average Change: $-2315.12\n",
+      "Greatest Increase in Profits:$1926159.0\n",
+      "Greatest Decrease in Profits:$-2196167.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Financial Analysis\")\n",
+    "print(\"----------------------------\")\n",
+    "print(f\"Total Months: {budget_dataframe['Date'].count()}\")\n",
+    "print(f\"Total: ${budget_dataframe['Profit/Losses'].sum()}\")\n",
+    "print(f\"Average Change: ${round(budget_dataframe['Changes'].mean(),2)}\")\n",
+    "print(f\"Greatest Increase in Profits:${budget_dataframe['Changes'].max()}\")\n",
+    "print(f\"Greatest Decrease in Profits:${budget_dataframe['Changes'].min()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = Path(\"output.txt\")\n",
+    "with open (output, 'w') as file:\n",
+    "    file.write(\"Financial Analysis\")\n",
+    "    file.write(\"----------------------------\")\n",
+    "    file.write(\"Total Months: 86\")\n",
+    "    file.write(\"Total: $38382578\")\n",
+    "    file.write(\"Average Change: $-2315.12\")\n",
+    "    file.write(\"Greatest Increase in Profits:$1926159.0\")\n",
+    "    file.write(\"Greatest Decrease in Profits:$-2196167.0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
